# A-PONTE-AIOps

./: .aponteignore  .bandit  .checkov.yml  .env.example  .gitignore  .pre-commit-config.yaml  .tflint.hcl  .tfsec.yml  .tfsecignore  Makefile  README.md  gitleaks.toml  go.mod  go.sum  pyproject.toml  requirements.txt  root.hcl  trivy.yaml
.github/workflows/: apply-infra.yml  ci.yml  drift-detection.yml  reusable-compliance.yml
cli/: main.go
cli/cmd/: ai.go  architect.go  audit.go  break_glass.go  clean.go  context.go  deploy.go  doc.go  doctor.go  drift.go  drift_fix.go  drift_report.go  git.go  git_clone.go  git_push.go  github.go  github_sync.go  github_whoami.go  infra.go  install.go  logs.go  mcp.go  menu.go  monitor.go  observer.go  ops.go  project.go  project_backup.go  project_create.go  project_destroy.go  project_detach.go  project_list.go  project_switch.go  project_validate.go  repo.go  repo_add.go  repo_list.go  repo_remove.go  repo_sync.go  resolver.go  (+12 more)
config/ai/: aponte-ai.modelfile
core/: prompts.py  server.py
docs/: AGENTS.md  AUTHORS.md  CHAT_CAPABILITIES.md  CODE_OF_CONDUCT.md  CORE_AGENTS.md  DISASTER_RECOVERY.md  DOCUMENTACAO.md  FUNCTION_MAP.md  INTEGRATION_GUIDE.md  LICENSE copy  MANIFESTO.md  MCP_TOOLS.md  OFFBOARDING.md  ONBOARDING.md  REMEDIATION_PLAN.md  ROADMAP.md  SAFETY.md  SECURITY.md  TOOLS.md  TROUBLESHOOTING.md  WORKFLOWS.md  contributing.md  requirements.txt  sources.txt  topics.txt
tests/: README.md  a-ponte_test.go  conftest.py  go.mod  test_graph_architect.py  test_iac.py  test_integration.py  test_mcp_aws_reader.py
(+163 files in other folders)
